# routes/games.js
@@ -6,17 +6,34 @@ const {
     idValidationRule,
     checkValidationResult,
 } = require('../validators/games')
+const { isAuthenticated } = require('../middleware/auth')
 
 router.get('/', gamesController.getGames)
 router.get('/:id', idValidationRule, checkValidationResult, gamesController.getGameById)
-router.post('/', gameValidationRules, checkValidationResult, gamesController.createGame)
+router.post(
+    '/',
+    /*  #swagger.security = [{ "cookieAuth": [] }] */
+    isAuthenticated,
+    gameValidationRules,
+    checkValidationResult,
+    gamesController.createGame
+)
 router.put(
     '/:id',
+    /*  #swagger.security = [{ "cookieAuth": [] }] */
+    isAuthenticated,
     idValidationRule,
     gameValidationRules,
     checkValidationResult,
     gamesController.updateGame
 )
-router.delete('/:id', idValidationRule, checkValidationResult, gamesController.deleteGame)
+router.delete(
+    '/:id',
+    /*  #swagger.security = [{ "cookieAuth": [] }] */
+    isAuthenticated,
+    idValidationRule,
+    checkValidationResult,
+    gamesController.deleteGame
+)
 
 module.exports = router
