# routes/index.js
@@ -3,5 +3,6 @@ const router = express.Router()
 
 router.use('/games', require('./games'))
 router.use('/reviews', require('./reviews'))
+router.use('/auth', require('./auth'))
 
 module.exports = router
